--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,11 @@
 
 
 /* ---- Base Rules ---- */
+html {
+    scroll-behavior: smooth;
+}
+
+
 body {
     background: rgb(136,203,171);
     background: linear-gradient(0deg, rgba(136,203,171,1) 0%, rgba(0,13,60,1) 100%);
@@ -75,8 +80,8 @@ section {
 }
 
 .navbar__menu .menu__link {
-    display: block;
-    padding: 1em;
+/*display: block;*/
+   padding: 1em;
     font-weight: bold;
     text-decoration: none;
     color: #000;
