--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,11 @@ section {
     color: #fff;
     transition: ease 0.3s all;
 }
-
+.menul {
+    background: #333;
+    color: #fff;
+   
+}
 /* Header Styles */
 .page__header {
     background: #fff;
